# nagi-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
boot/: stage1.asm  stage2.asm
docs/: architecture.md  course-proposal.md  course-report.md  demo-guide.md  design.md  implementation-checklist.md  implementation-summary.md
kernel/: linker.ld
kernel/src/: console.rs  fs.rs  idt.rs  keyboard.rs  klog.rs  main.rs  mem.rs  pic.rs  pit.rs  port.rs  serial.rs  shell.rs  syscall.rs  task.rs  trace.rs  ui.rs  user.rs  vga.rs
scripts/: build.ps1  run.ps1  setup.ps1  smoke.ps1
