[package]
name = "nagi-kernel"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Nagi OS kernel: a Rust-based observable teaching operating system."

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
strip = false

[[bin]]
name = "nagi-kernel"
path = "kernel/src/main.rs"

